[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/Background.gd" type="Script" id=1]
[ext_resource path="res://Textures/Backgrounds/Version_01.png" type="Texture" id=2]
[ext_resource path="res://Textures/Backgrounds/Version_02.png" type="Texture" id=3]
[ext_resource path="res://Textures/Backgrounds/Version_03.png" type="Texture" id=4]
[ext_resource path="res://Textures/Backgrounds/Version_04.png" type="Texture" id=5]
[ext_resource path="res://Textures/Scena_i_Lik_Skica_012.png" type="Texture" id=6]
[ext_resource path="res://Textures/white_eliptical_glow_001.png" type="Texture" id=7]

[node name="Background" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Version_01" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="Version_02" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="Version_03" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="Version_04" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="Level_Info" type="Label" parent="."]

visibility/visible = false
rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 264.0
margin/top = 114.0
margin/right = 328.0
margin/bottom = 128.0
text = "Level_000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Debug" type="Sprite" parent="."]

visibility/visible = false
visibility/opacity = 0.33
transform/pos = Vector2( 960, 540 )
texture = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 945.182, 206.759 )
enabled = true
editor_only = false
texture = ExtResource( 7 )
offset = Vector2( 0, 0 )
scale = 2.0
color = Color( 1, 1, 1, 1 )
energy = 2.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="LightSprite" type="Sprite" parent="."]

visibility/opacity = 0.44
visibility/blend_mode = 1
transform/pos = Vector2( 960, 630 )
texture = ExtResource( 7 )
modulate = Color( 1, 0.986511, 0.933594, 1 )


